@@ -1,6 +1,7 @@
 import com.typesafe.sbt.packager.docker.{Cmd, LayeredMapping}
-import sbt.Keys._
-import sbt._
+import com.typesafe.sbt.packager.universal.UniversalPlugin.autoImport.Universal
+import sbt.*
+import sbt.Keys.*
 
 import java.nio.file.Paths
 
@@ -23,7 +24,7 @@ lazy val commonSettings = Seq(
 )
 
 lazy val buildSettings = Seq(
-  scalaVersion := "2.12.18",
+  scalaVersion := "2.13.16",
   javacOptions ++= Seq(
     "-source",
     "21",
@@ -33,10 +34,6 @@ lazy val buildSettings = Seq(
   scalacOptions ++= Seq(
     "-feature",
     "-unchecked",
-    // When compiling in encrypted drives in Linux, the max size of a name is reduced to around 140
-    // https://unix.stackexchange.com/a/32834
-    "-Xmax-classfile-name",
-    "140",
     "-deprecation",
     "-Xlint:-stars-align,_",
     "-Ywarn-dead-code",
@@ -44,6 +41,18 @@ lazy val buildSettings = Seq(
     "-Ypatmat-exhaust-depth",
     "160"
   )
+)
+
+lazy val chronicleFlags = Seq(
+  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+  "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+  "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED"
 )
 
 lazy val compileSettings = Seq(
@@ -55,7 +64,10 @@ lazy val compileSettings = Seq(
     "Automatic-Module-Name" -> name.value.replace('-', '.')
   ),
   // Ensure Java annotations get compiled first, so that they are accessible from Scala.
-  compileOrder := CompileOrder.JavaThenScala
+  compileOrder := CompileOrder.JavaThenScala,
+  // Ensure we fork new JVM for run, so we can set JVM flags.
+  Compile / run / fork := true,
+  Compile / run / javaOptions ++= chronicleFlags
 )
 
 lazy val testSettings = Seq(
@@ -65,7 +77,7 @@ lazy val testSettings = Seq(
   //Test / parallelExecution := false,
   // Pass system properties starting with "raw." to the forked JVMs.
   Test / javaOptions ++= {
-    import scala.collection.JavaConverters._
+    import scala.collection.JavaConverters.*
     val props = System.getProperties
     props
       .stringPropertyNames()
@@ -79,6 +91,7 @@ lazy val testSettings = Seq(
     "-XX:+HeapDumpOnOutOfMemoryError",
     s"-XX:HeapDumpPath=${Paths.get(sys.env.getOrElse("SBT_FORK_OUTPUT_DIR", "target/test-results")).resolve("heap-dumps")}"
   ),
+  Test / javaOptions ++= chronicleFlags,
   Test / publishArtifact := true
 )
 
@@ -104,7 +117,8 @@ lazy val root = (project in file("."))
     strictBuildSettings,
     publishSettings,
     libraryDependencies ++= Seq(
-      "com.raw-labs" %% "das-sdk-scala" % "0.1.4" % "compile->compile;test->test",
+      "com.raw-labs" %% "das-server-scala" % "1.0.0-beta" % "compile->compile;test->test",
+      "com.raw-labs" %% "protocol-das" % "1.0.0-beta" % "compile->compile;test->test",
       "com.frejo" % "force-rest-api" % "0.0.45",
       "joda-time" % "joda-time" % "2.12.7",
       "com.fasterxml.jackson.datatype" % "jackson-datatype-jsr310" % "2.15.2",
@@ -114,13 +128,14 @@ lazy val root = (project in file("."))
     )
   )
 
+val arch = sys.env.getOrElse("ARCH", "amd64")
 val amzn_jdk_version = "21.0.4.7-1"
-val amzn_corretto_bin = s"java-21-amazon-corretto-jdk_${amzn_jdk_version}_amd64.deb"
+val amzn_corretto_bin = s"java-21-amazon-corretto-jdk_${amzn_jdk_version}_${arch}.deb"
 val amzn_corretto_bin_dl_url = s"https://corretto.aws/downloads/resources/${amzn_jdk_version.replace('-', '.')}"
 
 lazy val dockerSettings = strictBuildSettings ++ Seq(
   name := "das-salesforce-server",
-  dockerBaseImage := s"--platform=amd64 debian:bookworm-slim",
+  dockerBaseImage := s"debian:bookworm-slim",
   dockerLabels ++= Map(
     "vendor" -> "RAW Labs SA",
     "product" -> "das-salesforce-server",
@@ -134,7 +149,7 @@ lazy val dockerSettings = strictBuildSettings ++ Seq(
   // We remove the automatic switch to USER 1001:0.
   // We we want to run as root to install the JDK, also later we will switch to a non-root user.
   dockerCommands := dockerCommands.value.filterNot {
-    case Cmd("USER", args @ _*) => args.contains("1001:0")
+    case Cmd("USER", args@_*) => args.contains("1001:0")
     case cmd => false
   },
   dockerCommands ++= Seq(
@@ -166,13 +181,13 @@ lazy val dockerSettings = strictBuildSettings ++ Seq(
     val ClasspathPattern = "declare -r app_classpath=\"(.*)\"\n".r
     bashScriptDefines.value.map {
       case ClasspathPattern(classpath) => s"""
-        |declare -r app_classpath="$${app_home}/../conf:$classpath"
-        |""".stripMargin
-      case _ @entry => entry
+                                             |declare -r app_classpath="$${app_home}/../conf:$classpath"
+                                             |""".stripMargin
+      case _@entry => entry
     }
   },
   Docker / dockerLayerMappings := (Docker / dockerLayerMappings).value.map {
-    case lm @ LayeredMapping(Some(1), file, path) => {
+    case lm@LayeredMapping(Some(1), file, path) => {
       val fileName = java.nio.file.Paths.get(path).getFileName.toString
       if (!fileName.endsWith(".jar")) {
         // If it is not a jar, put it on the top layer. Configuration files and other small files.
@@ -185,9 +200,9 @@ lazy val dockerSettings = strictBuildSettings ++ Seq(
         lm
       }
     }
-    case lm @ _ => lm
+    case lm@_ => lm
   },
-  Compile / mainClass := Some("com.rawlabs.das.server.DASServerMain"),
+  Compile / mainClass := Some("com.rawlabs.das.server.DASServer"),
   Docker / dockerAutoremoveMultiStageIntermediateImages := false,
   dockerAlias := dockerAlias.value.withTag(Option(version.value.replace("+", "-"))),
   dockerAliases := {
@@ -197,12 +212,15 @@ lazy val dockerSettings = strictBuildSettings ++ Seq(
 
     releaseRegistry match {
       case Some(releaseReg) => Seq(
-          baseAlias,
-          dockerAlias.value.withRegistryHost(Some(releaseReg))
-        )
+        baseAlias,
+        dockerAlias.value.withRegistryHost(Some(releaseReg))
+      )
       case None => Seq(baseAlias)
     }
-  }
+  },
+  Universal / javaOptions ++= chronicleFlags.map("-J" + _)
+
+
 )
 
 lazy val docker = (project in file("docker"))
@@ -213,5 +231,5 @@ lazy val docker = (project in file("docker"))
   .settings(
     strictBuildSettings,
     dockerSettings,
-    libraryDependencies += "com.raw-labs" %% "das-server-scala" % "0.1.7" % "compile->compile;test->test"
+    libraryDependencies += "com.raw-labs" %% "das-server-scala" % "1.0.0-beta" % "compile->compile;test->test",
   )
